compiler/src/Parser/grammar.txt
translation_unit
    : external_declaration*
    ;

external_declaration
    : function_definition
    | declaration
    ;

function_definition
    : type_specifier declarator compound_statement
    ;

function_declaration
    : type_specifier declarator ';'
    ;

type_specifier
    : KW_INT
    | KW_VOID
    ;

declaration
    : type_specifier init_declarator_list ';'
    ;

init_declarator_list
    : init_declarator
    | init_declarator_list ',' init_declarator
    ;

init_declarator
    : declarator
    | declarator '=' initializer
    ;

initializer
    : assignment_expression
    ;

declarator
    : pointer_opt direct_declarator
    ;

pointer_opt
    : /* empty */
    | pointer
    ;

pointer
    : '*'
    | '*' pointer
    ;

direct_declarator
    : IDENTIFIER
    | '(' declarator ')'
    | direct_declarator '[' constant_expression_opt ']'
    | direct_declarator '(' parameter_list_opt ')'
    ;

parameter_list_opt
    : /* empty */
    | parameter_list
    ;

parameter_list
    : parameter_declaration
    | parameter_list ',' parameter_declaration
    ;

parameter_declaration
    : type_specifier declarator
    ;

statement
    : compound_statement
    | expression_statement
    | selection_statement
    | iteration_statement
    | jump_statement
    ;

compound_statement
    : '{' '}'
    | '{' block_item_list '}'
    ;

block_item_list
    : block_item
    | block_item_list block_item
    ;

block_item
    : declaration
    | statement
    ;

expression_statement
    : ';'
    | expression ';'
    ;

selection_statement
    : KW_IF '(' expression ')' statement
    | KW_IF '(' expression ')' statement KW_ELSE statement
    ;

iteration_statement
    : KW_WHILE '(' expression ')' statement

    | KW_FOR '(' expression_statement
                expression_statement
                ')' statement

    | KW_FOR '(' expression_statement
                expression_statement
                expression ')' statement

    | KW_FOR '(' declaration
                expression_statement
                ')' statement

    | KW_FOR '(' declaration
                expression_statement
                expression ')' statement
    ;

jump_statement
    : KW_RETURN ';'
    | KW_RETURN expression ';'
    ;

expression
    : assignment_expression
    | expression ',' assignment_expression
    ;

assignment_expression
    : conditional_expression
    | unary_expression assignment_operator assignment_expression
    ;

assignment_operator
    : '='
    | MUL_ASSIGN
    | DIV_ASSIGN
    | MOD_ASSIGN
    | ADD_ASSIGN
    | SUB_ASSIGN
    | LEFT_ASSIGN
    | RIGHT_ASSIGN
    | AND_ASSIGN
    | XOR_ASSIGN
    | OR_ASSIGN
    ;

conditional_expression
    : logical_or_expression
    | logical_or_expression '?' expression ':' conditional_expression
    ;

logical_or_expression
    : logical_and_expression
    | logical_or_expression OR_OR logical_and_expression
    ;

logical_and_expression
    : bitwise_or_expression
    | logical_and_expression AND_AND bitwise_or_expression
    ;

bitwise_or_expression
    : bitwise_xor_expression
    | bitwise_or_expression '|' bitwise_xor_expression
    ;

bitwise_xor_expression
    : bitwise_and_expression
    | bitwise_xor_expression '^' bitwise_and_expression
    ;

bitwise_and_expression
    : equality_expression
    | bitwise_and_expression '&' equality_expression
    ;

equality_expression
    : relational_expression
    | equality_expression EQ_EQUAL relational_expression
    | equality_expression NOT_EQUAL relational_expression
    ;

relational_expression
    : shift_expression
    | relational_expression '<' shift_expression
    | relational_expression '>' shift_expression
    | relational_expression LESS_EQUAL shift_expression
    | relational_expression GREATER_EQUAL shift_expression
    ;

shift_expression
    : additive_expression
    | shift_expression SHIFT_LEFT additive_expression
    | shift_expression SHIFT_RIGHT additive_expression
    ;

additive_expression
    : multiplicative_expression
    | additive_expression '+' multiplicative_expression
    | additive_expression '-' multiplicative_expression
    ;

multiplicative_expression
    : unary_expression
    | multiplicative_expression '*' unary_expression
    | multiplicative_expression '/' unary_expression
    | multiplicative_expression '%' unary_expression
    ;

unary_expression
    : postfix_expression
    | PLUS_PLUS unary_expression
    | MINUS_MINUS unary_expression
    | unary_operator unary_expression
    ;

unary_operator
    : '&'
    | '*'
    | '+'
    | '-'
    | '~'
    | '!'
    ;

postfix_expression
    : primary_expression
    | postfix_expression '[' expression ']'
    | postfix_expression '(' argument_expression_list_opt ')'
    | postfix_expression '.' IDENTIFIER
    | postfix_expression ARROW IDENTIFIER
    | postfix_expression PLUS_PLUS
    | postfix_expression MINUS_MINUS
    ;

argument_expression_list_opt
    : /* empty */
    | argument_expression_list
    ;

argument_expression_list
    : assignment_expression
    | argument_expression_list ',' assignment_expression
    ;

primary_expression
    : IDENTIFIER
    | INTLIT
    | '(' expression ')'
    ;

constant_expression_opt
    : /* empty */
    | constant_expression
    ;

constant_expression
    : conditional_expression
    ;
